--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.bstu.iitus.vt41.OsipovDV</groupId>
-    <artifactId>javalab</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>ru.bstu</groupId>
+    <artifactId>iitus.vt41.osipovDV.java</artifactId>
+    <version>1.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
